--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MERN Azure</title>
+    <title>MERN Azure.</title>
 </head>
 <body>
     <p>This file was served from the server on GET route.</p>
